--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-search-field": "^1.0.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "validator": "^11.1.0"
